[package]
name = "cargo-health"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A cargo subcommand that scans your dependency tree and reports maintenance health"
readme = "README.md"

[[bin]]
name = "cargo-health"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
colored = "2"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
